# Room

./: .gitignore  Cargo.toml  README.md
audio/: Cargo.toml
audio/src/: lib.rs
backlog/: config.yml
backlog/docs/: learning-path.md
backlog/tasks/: task-1 - Learn-Rust-basics-with-simple-project-setup.md  task-10 - Set-up-basic-SDL2-window.md  task-11 - Draw-simple-shapes-to-screen.md  task-12 - Create-a-simple-game-loop.md  task-13 - Draw-a-simple-top-down-map-view.md  task-14 - Add-a-movable-player-dot.md  task-15 - Learn-about-modules-and-code-organization.md  task-16 - Implement-basic-collision-detection.md  task-17 - Add-simple-line-of-sight-calculation.md  task-18 - Create-a-simple-raycasting-demo.md  task-19 - Learn-about-iterators-and-functional-programming.md  task-2 - Learn-Rust-ownership-with-simple-data-structures.md  task-20 - Add-basic-wall-textures.md  task-21 - Learn-about-lifetimes-and-advanced-borrowing.md  task-22 - Implement-a-simple-entity-system.md  task-23 - Add-basic-sound-effects.md  task-24 - Learn-about-performance-optimization.md  task-25 - Add-simple-AI-for-moving-entities.md  task-26 - Learn-about-concurrent-programming-with-threads.md  task-27 - Implement-basic-BSP-tree-traversal.md  task-28 - Add-proper-floor-and-ceiling-rendering.md  task-29 - Learn-about-testing-and-debugging.md  task-3 - Learn-error-handling-with-Result-and-Option.md  task-30 - Create-a-complete-playable-mini-Doom.md  task-4 - Read-binary-files-safely-with-byteorder.md  task-5 - Create-basic-WAD-file-reader.md  task-6 - Learn-collections-with-HashMap-and-Vec.md  task-7 - Parse-map-vertices-from-WAD-file.md  task-8 - Learn-pattern-matching-with-enums.md  task-9 - Create-a-simple-2D-coordinate-system.md
doom/: Cargo.toml
doom/src/: main.rs
engine/: Cargo.toml
engine/src/: lib.rs
entity/: Cargo.toml
entity/src/: lib.rs
input/: Cargo.toml
map/: Cargo.toml
player/: Cargo.toml
wad/: Cargo.toml
(+6 files in other folders)
