[workspace]
members = [
    "doom",
    "engine",
    "math",
    "wad",
]
resolver = "3"

[workspace.dependencies]
byteorder = "1.5.0"
thiserror = "2.0.12"
sdl2 = "0.38.0"
glam = "0.30.4"
serde = { version = "1.0.219", features = ["derive"] }
wad = { path = "wad" }
math = { path = "math" }
engine = { path = "engine" }