[workspace]
members = [ "audio",
    "doom",
    "engine",
    "entity", "input",
    "map",
    "math",
    "player",
    "renderer",
    "wad",
]
resolver = "3"

[workspace.dependencies]
byteorder = "1.5.0"
thiserror = "2.0.12"
sdl2 = { version = "0.38.0", features = ["bundled", "mixer"] }
bevy_ecs = "0.16.1"
glam = "0.30.4"
serde = { version = "1.0.219", features = ["derive"] }
engine = { path = "engine" }
entity = { path = "entity" }
map = { path = "map" }
math = { path = "math" }
player = { path = "player" }
input = { path = "input" }
renderer = { path = "renderer" }
wad = { path = "wad" }

